# namespace-provisioner

./: .bazelrc  .gitignore  .golangci.yml  .licensed.yml  .markdownlint.yml  BUILD.bazel  CHANGELOG.md  Dockerfile  README.md  Taskfile.yml  Taskvars.yml  WORKSPACE  config.yml  go.mod  go.sum  main.go
.github/: dependabot.yml
.github/actions/golangci-lint/: Dockerfile  action.yml  entrypoint.sh
.github/actions/markdown-link-checker/: Dockerfile  action.yml  entrypoint.sh
.github/workflows/: ci-windows.yml  ci.yml  it.yml  licensed.yml  lint.yml  release.yml  static-analysis.yml
.licenses/go/cloud.google.com/go/compute/: metadata.dep.yml
.licenses/go/github.com/beorn7/perks/: quantile.dep.yml
.licenses/go/github.com/davecgh/go-spew/: spew.dep.yml
.licenses/go/github.com/evanphx/: json-patch.dep.yml
.licenses/go/github.com/go-logr/: logr.dep.yml  zapr.dep.yml
.licenses/go/github.com/gogo/protobuf/: proto.dep.yml  sortkeys.dep.yml
.licenses/go/github.com/golang/groupcache/: lru.dep.yml
.licenses/go/github.com/golang/protobuf/: proto.dep.yml  ptypes.dep.yml
.licenses/go/github.com/google/: gofuzz.dep.yml
.licenses/go/github.com/google/go-cmp/: cmp.dep.yml
.licenses/go/github.com/googleapis/gnostic/: OpenAPIv2.dep.yml  compiler.dep.yml  extensions.dep.yml
.licenses/go/github.com/hashicorp/: golang-lru.dep.yml
.licenses/go/github.com/hashicorp/golang-lru/: simplelru.dep.yml
.licenses/go/github.com/imdario/: mergo.dep.yml
.licenses/go/github.com/json-iterator/: go.dep.yml
.licenses/go/github.com/matttproud/golang_protobuf_extensions/: pbutil.dep.yml
.licenses/go/github.com/modern-go/: concurrent.dep.yml  reflect2.dep.yml
.licenses/go/github.com/pborman/: uuid.dep.yml
.licenses/go/github.com/pkg/: errors.dep.yml
.licenses/go/github.com/prometheus/: procfs.dep.yml
.licenses/go/github.com/prometheus/client_golang/: prometheus.dep.yml
.licenses/go/github.com/prometheus/client_model/: go.dep.yml
.licenses/go/github.com/prometheus/common/: expfmt.dep.yml  model.dep.yml
.licenses/go/github.com/prometheus/procfs/: nfs.dep.yml  xfs.dep.yml
.licenses/go/github.com/spf13/: pflag.dep.yml
.licenses/go/go.uber.org/: atomic.dep.yml  multierr.dep.yml  zap.dep.yml
.licenses/go/go.uber.org/zap/: buffer.dep.yml  zapcore.dep.yml
.licenses/go/go.uber.org/zap/internal/: bufferpool.dep.yml  color.dep.yml  exit.dep.yml
.licenses/go/golang.org/x/: oauth2.dep.yml
.licenses/go/golang.org/x/net/: context.dep.yml  http2.dep.yml  idna.dep.yml
.licenses/go/golang.org/x/oauth2/: google.dep.yml  internal.dep.yml  jws.dep.yml  jwt.dep.yml
.licenses/go/golang.org/x/sys/: unix.dep.yml
.licenses/go/golang.org/x/text/: transform.dep.yml
.licenses/go/gomodules.xyz/jsonpatch/: v2.dep.yml
.licenses/go/gopkg.in/: fsnotify.v1.dep.yml  inf.v0.dep.yml  yaml.v2.dep.yml
.licenses/go/k8s.io/: klog.dep.yml
.licenses/go/k8s.io/client-go/: discovery.dep.yml  dynamic.dep.yml  kubernetes.dep.yml  rest.dep.yml  restmapper.dep.yml  transport.dep.yml
.licenses/go/k8s.io/utils/: buffer.dep.yml  integer.dep.yml  pointer.dep.yml  trace.dep.yml
.licenses/go/sigs.k8s.io/: controller-runtime.dep.yml  yaml.dep.yml
deploy/: namespace-provisioner-kind-kind.yaml
pkg/controllers/: BUILD.bazel  controllers_suite_test.go  namespace_controller.go  namespace_controller_test.go  suite_test.go
pkg/util/: BUILD.bazel  config.go
scripts/: version.sh
tasks/: BuildTasks.yml  DockerTasks.yml
test/: run-it.sh
test/deploy/: namespace-provisioning-networkpolicy.yaml
(+210 files in other folders)
