load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["config.go"],
    importpath = "github.com/Daimler/namespace-provisioner/pkg/util",
    visibility = ["//visibility:public"],
    deps = ["@com_github_go_logr_logr//:go_default_library"],
)
